# portfolio-annalytics-v3

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: qa_plan.md
scripts/: __init__.py  validate_parity.py
src/portfolio_analytics/: __init__.py
src/portfolio_analytics/application/: __init__.py  bond_analysis.py  equity_analysis.py  portfolio_analysis.py  report_generation.py
src/portfolio_analytics/config/: __init__.py  constants.py  settings.py
src/portfolio_analytics/domain/: __init__.py
src/portfolio_analytics/domain/common/: exceptions.py  models.py
src/portfolio_analytics/domain/equity/: __init__.py  models.py
src/portfolio_analytics/domain/fixed_income/: __init__.py  duration.py  models.py  price_sensitivity.py  yield_curve.py
src/portfolio_analytics/domain/portfolio/: __init__.py  models.py  monte_carlo.py  optimization.py  rebalancing.py
src/portfolio_analytics/domain/risk/: __init__.py  models.py
src/portfolio_analytics/infrastructure/: __init__.py
src/portfolio_analytics/infrastructure/data_sources/: __init__.py  alpha_vantage.py  base.py  caching.py  edgar.py  yahoo.py
src/portfolio_analytics/infrastructure/persistence/: __init__.py  repositories.py
src/portfolio_analytics/presentation/: __init__.py
src/portfolio_analytics/utils/: __init__.py  logging.py  sanitization.py
tests/: __init__.py
tests/integration/api/: __init__.py  test_api.py
tests/unit/config/: test_settings.py
tests/unit/domain/: __init__.py
tests/unit/domain/portfolio/: __init__.py  (+2 more)
tests/unit/utils/: test_sanitization.py
(+11 files in other folders)
